--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,9 @@ ol {
 
   html {
     display: inline-block;
-    max-width: 20em;
+    max-width: 30em;
+    font-size:
+    line-height:
   }
 
 }
@@ -77,7 +79,9 @@ ol {
 
   html {
     display: inline-block;
-    max-width: 24em;
+    max-width: 40em;
+    font-size:
+    line-height:
   }
 
 }
@@ -86,7 +90,9 @@ ol {
 
   html {
     display: inline-block;
-    max-width: 24em;
+    max-width: 60em;
+    font-size:
+    line-height:
   }
 
 }
@@ -95,7 +101,9 @@ ol {
 
   html {
     display: inline-block;
-    max-width: 24em;
+    max-width: 80em;
+    font-size:
+    line-height:
   }
 
 }
