--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,8 @@ html {
   text-size-adjust: 100%;
 
   color: #222;
-  font-family: Crimson, serif;
-  line-height: 1.5;
+  font-family: "Crimson text", serif;
+  line-height: 1.3;
 }
 
 *, *::before, *::after {
@@ -29,6 +29,7 @@ body {
 article {
   max-width: 43em;
   display: block;
+  width: auto;
 }
 
 article h1 {
@@ -70,8 +71,8 @@ ol {
 @media only screen and (min-width: 25em) {
 
   html {
-    font-size:
-    line-height:
+    font-size: 100%;
+    line-height:1.3;
   }
 
 }
@@ -79,8 +80,8 @@ ol {
 @media only screen and (min-width: 38em) {
 
   html {
-    font-size:
-    line-height:
+    font-size: 110%;
+    line-height: 1.4;
   }
 
 }
@@ -88,8 +89,8 @@ ol {
 @media only screen and (min-width: 60em) {
 
   html {
-    font-size:
-    line-height:
+    font-size: 120%;
+    line-height: 1.5;
   }
 
 }
@@ -97,8 +98,8 @@ ol {
 @media only screen and (min-width: 90em) {
 
   html {
-    font-size:
-    line-height:
+    font-size: 130%;
+    line-height: 1.5;
   }
 
 }
