--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html {
   text-size-adjust: 100%;
 
   color: #222;
-  font-family: Crimson text;
+  font-family: "Crimson Text";
   line-height: 1.3;
 }
 
@@ -75,6 +75,10 @@ ol {
     line-height: 1.3;
   }
 
+  article {
+    margin: 1.3rem auto;
+  }
+
 }
 
 @media only screen and (min-width: 38em) {
@@ -82,6 +86,10 @@ ol {
   html {
     font-size: 110%;
     line-height: 1.4;
+  }
+
+  article {
+    margin: 1.4rem auto;
   }
 
 }
@@ -93,14 +101,23 @@ ol {
     line-height: 1.5;
   }
 
+  article {
+    margin: 1.5rem auto;
+  }
+
 }
 
 @media only screen and (min-width: 90em) {
 
   html {
     font-size: 130%;
-    width: auto;
-    max-width: 50%;
   }
+
+  article {
+    margin: 1.5rem auto;
+    display: block;
+    width: auto;
+    max-width: 33em;
+}
 
 }
