--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,10 @@ ol {
     margin: 1.3rem auto;
   }
 
+  article p {
+    padding-bottom: .3rem;
+  }
+
 }
 
 @media only screen and (min-width: 38em) {
@@ -90,6 +94,10 @@ ol {
 
   article {
     margin: 1.4rem auto;
+  }
+
+  article p {
+    padding-bottom: .4rem;
   }
 
 }
@@ -105,6 +113,10 @@ ol {
     margin: 1.5rem auto;
   }
 
+  article p {
+    padding-bottom: .4rem;
+  }
+
 }
 
 @media only screen and (min-width: 90em) {
@@ -118,6 +130,11 @@ ol {
     display: block;
     width: auto;
     max-width: 33em;
-}
+  }
+
+  article p {
+    padding-bottom: .5rem;
+  }
+
 
 }
