--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,22 @@ article ol {
     padding-bottom: .3rem;
   }
 
+  article > p:nth-child(2) {
+    padding-top: .3em;
+  }
+
+  .quote {
+    padding: 0;
+  }
+
+  article > p:nth-child(5) {
+    padding-bottom: .1em;
+  }
+
+  article ol {
+    padding-bottom: .2em;
+  }
+
   article > p:last-child {
     border-bottom: 1px solid #999;
     padding-bottom: 1em;
@@ -109,11 +125,15 @@ article ol {
   }
 
   article > p:nth-child(2) {
-    padding-top: .5em;
+    padding-top: .3em;
+  }
+
+  .quote {
+    padding: 0;
   }
 
   article ol {
-    padding-bottom: .5em;
+    padding-bottom: .3em;
   }
 
   article > p:last-child {
