--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ article header p {
 
 article > p:last-child {
   border-bottom: 1px solid #999;
-  padding-bottom: .5em;
+  padding-bottom: 2em;
 }
 
 blockquote {
@@ -63,12 +63,18 @@ article p {
   padding-bottom: .2rem;
 }
 
-article ol {
-  padding-left: 1em;
-}
-
 .quote {
   color: #999;
+  padding: 0;
+}
+
+article > p:nth-child(2) {
+  padding-top: .4em;
+}
+
+article ol {
+  padding-left: 1em;
+  padding-bottom: .3em;
 }
 
 @media only screen and (min-width: 25em) {
