--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ body {
   margin: 0;
   margin-left: 1em;
   margin-right: 1em;
+  margin-bottom: 1em;
 }
 
 article {
@@ -49,6 +50,7 @@ article header p {
 article > p:last-child {
   border-bottom: 1px solid #999;
   padding-bottom: 1.5em;
+  margin-bottom: .5em;
 }
 
 blockquote {
@@ -75,6 +77,11 @@ article > p:nth-child(2) {
 article ol {
   padding-left: 1em;
   padding-bottom: .3em;
+}
+
+article > p:nth-child(5) {
+  padding-bottom: .2em;
+  padding-top: 0;
 }
 
 article > p:nth-child(6) {
