--- a/css/main.css
+++ b/css/main.css
@@ -45,12 +45,15 @@ article header {
 article header p {
   font-style: italic;
   margin-top: 0;
-  padding-bottom: .5em;
+}
+
+article > p:first-child {
+  padding-bottom: .3em;
 }
 
 article > p:last-child {
   border-bottom: 1px solid #999;
-  padding-bottom: 1.5em;
+  padding-bottom: 1.3em;
   margin-bottom: 1.3em;
 }
 
